trunk/Archive2/ba/0a804da5d34cb9/output
main.cpp:20:19: error: 'Inner' is a private member of 'Outer'
void func2(Outer::Inner inner, Dummy = Dummy()) {
                  ^
main.cpp:5:12: note: implicitly declared private here
    struct Inner {
           ^
1 error generated.
